css/style.css
html, body, #map-canvas {
  height: 100%;
  margin: 0;
  padding: 0;
}


#infowindow img {
  float: left;
  margin-right: 10px;
}

body {
  position: relative;
  font-size: 14px;
}

.searchbtn, .locbtn {
  display: none;
  color: black;
  background-color: rgba(255, 255, 255, .9);
  position: absolute;
  top: 10px;
  right: 78px;
  cursor: pointer;
  padding: 7px 6px;
  border-radius: 4px;
  border: 2px solid #9ac2c3;
}

.locbtn-large {
  color: black;
  background-color: rgba(255, 255, 255, .9);
  position: absolute;
  top: 34px;
  left: 319px;
  cursor: pointer;
  padding: 7px 6px;
  border: 1px solid gray;
}

.locbtn {
  right: 45px;
}

.searchbar {
  position: absolute;
  top: 25px;
  left: 10px;
  background-color: rgba(255,255,255, 0.9);
  border: 1px solid gray;
  padding: 15px 10px 5px 10px;
}

.searchbar input {
  width: 175px;
  padding: 5px;
}

#submit {
  width: 80px;
  padding: 7px;
  border: none;
  background: #2A6496;
  color: white;
}

.results {
  box-sizing: border-box;
  position: absolute;
  top: 25px;
  right: 10px;
  background: rgba(255,255,255, 0.9);
  width: 25%;
  max-height: 90%;
  border: 1px solid gray;
}


.toggler {
  position: absolute;
  top: 6px;
  right: 14px;
  font-size: 13px;
  font-style: italic;
  color: #a6a6a6;
  cursor: pointer;
}

.status-msg {
  box-sizing: border-box;
  font-size: 18px;
  padding: 9px 20px;
  color: #7b7b7b;
  margin-bottom: 0;
}

.waiting {
  text-align: center;
}

#results-list {
  padding: 0;
  list-style-type: none;
  overflow: auto;
  height: 450px;
}

#results-list li {
  border-top: 1px solid #e0e0e0;
  padding: 0 24px;
  cursor: pointer;
}

#results-list li h4 {
  margin-bottom: 0;
  color: #2A6496;
}

#results-list .address {
  font-size: 12px;
  line-height: 1.4;
  margin-top: 4px;
}

#results-list p {
  font-size: 14px;
}

.rating {
  color: #810000;
  font-weight: bold;
}

.rating span {
  font-size: 12px;
  font-style: italic;
  color: black;
}

.mobilebutton {
  display: none;
  color: #2A6496;
  background-color: rgba(255, 255, 255, .9);
  position: absolute;
  top: 10px;
  right: 13px;
  cursor: pointer;
  padding: 7px 6px;
  border-radius: 4px;
  border: 2px solid #9ac2c3 ;
}

.mobile-close {
  display: inline-block;
  padding: 5px 10px;
  color: gray;
  cursor: pointer;
  margin-left: 315px;
}

.mobileresults {
  position: fixed;
  top: 130px;
  right: 10px;
  background-color: rgba(250,250,250, .9);
  max-width: 350px;
}

@media only screen and (max-width: 775px) {
  .mobilebutton {
    display: block;
  }

  .searchbar {
    top: 10px;
  }

  .results {
    display: none;
  }

  .searchbar input {
    width: 130px;
  }

  #submit {
    width: 50px;
  }

  .status-msg {
    padding: 0 18px;
    font-size: 16px;
  }

  .searchbtn, .locbtn {
    display: inline;
  }

  .locbtn-large {
    display: none;
  }
}

@media only screen and (max-width: 499px) {
  .mobileresults {
    right: 10%;
    width: 65%;
  }
}


/*Autocomplete styles*/
.autocomplete-suggestions { border: 1px solid #999; background: #FFF; cursor: default; overflow: auto; -webkit-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); -moz-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); }
.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
.autocomplete-no-suggestion { padding: 2px 5px;}
.autocomplete-selected { background: #F0F0F0; }
.autocomplete-suggestions strong { font-weight: bold; color: #19C1CF; }
.autocomplete-group { padding: 2px 5px; }
.autocomplete-group strong { font-weight: bold; font-size: 16px; color: #000; display: block; border-bottom: 1px solid #000; }

